# docsend

./: .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt  test_service.py
docsend/: docsend.py  flask_service.py
