[tool.poetry]
name = "docsend"
version = "0.3.0"
description = ""
authors = ["yetanotheruservasya <38633691+yetanotheruservasya@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
